Fix color contrast and layouts

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@ body,
 }
 
 .outlineBtn {
-  @apply flex items-center justify-center gap-2 border-2 border-primary px-4 py-2 text-center text-lg font-semibold text-primary transition-colors hover:bg-primary hover:text-light dark:border-primaryDark dark:text-primaryDark dark:hover:bg-primaryDark dark:hover:text-dark md:px-8 md:py-4 md:text-xl;
+  @apply flex items-center justify-center gap-2 border-2 border-primary-800 px-4 py-2 text-center text-lg font-semibold text-primary-800 transition-colors hover:bg-primary-800 hover:text-light dark:border-primaryDark dark:text-primaryDark dark:hover:bg-primaryDark dark:hover:text-dark md:px-8 md:py-4 md:text-xl;
 }
 
 .primaryBtn {
